{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 926,
  "lineage": "9da31d94-d88d-98a1-1c46-1fe36a514573",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:loadbalancer/app/httpd-load-balancer/341902b758c7f803",
            "arn_suffix": "app/httpd-load-balancer/341902b758c7f803",
            "dns_name": "httpd-load-balancer-1460255695.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:loadbalancer/app/httpd-load-balancer/341902b758c7f803",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "httpd-load-balancer",
            "security_groups": [
              "sg-0790e00fde976254e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cef58190394af6d"
              },
              {
                "subnet_id": "subnet-04e3be87ffc3357ff"
              }
            ],
            "subnets": [
              "subnet-01cef58190394af6d",
              "subnet-04e3be87ffc3357ff"
            ],
            "vpc_id": "vpc-0d1dead4e2acdbbe7",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:listener/app/httpd-load-balancer/341902b758c7f803/4f7092d6a5e7a8a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:targetgroup/target-group/aab76fe6473617f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:listener/app/httpd-load-balancer/341902b758c7f803/4f7092d6a5e7a8a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:loadbalancer/app/httpd-load-balancer/341902b758c7f803",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:targetgroup/target-group/aab76fe6473617f7",
            "arn_suffix": "targetgroup/target-group/aab76fe6473617f7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:875836252453:targetgroup/target-group/aab76fe6473617f7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-dc042d9a",
            "domain": "vpc",
            "id": "eipalloc-02072e1bddd2e0703",
            "network_interface": "eni-031b12a3f42b1fe1b",
            "private_dns": "ip-10-0-2-98.eu-north-1.compute.internal",
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-13-48-210-81.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.210.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-6cd6f130",
            "domain": "vpc",
            "id": "eipalloc-00723faeb2f101e76",
            "network_interface": "eni-047e1da4179b99d3f",
            "private_dns": "ip-10-0-3-70.eu-north-1.compute.internal",
            "private_ip": "10.0.3.70",
            "public_dns": "ec2-13-48-145-144.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.145.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06f288537dfe7a451",
            "owner_id": "875836252453",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02072e1bddd2e0703",
            "id": "nat-0faafd61256b71ba3",
            "network_interface_id": "eni-031b12a3f42b1fe1b",
            "private_ip": "10.0.2.98",
            "public_ip": "13.48.210.81",
            "subnet_id": "subnet-04e3be87ffc3357ff"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00723faeb2f101e76",
            "id": "nat-02b9524db62d22ccd",
            "network_interface_id": "eni-047e1da4179b99d3f",
            "private_ip": "10.0.3.70",
            "public_ip": "13.48.145.144",
            "subnet_id": "subnet-01cef58190394af6d"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_acces",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f288537dfe7a451",
            "id": "r-rtb-092ca7c688796bf381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092ca7c688796bf38",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2cdf92e20032506",
            "owner_id": "875836252453",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0faafd61256b71ba3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082ae9243975c0780",
            "owner_id": "875836252453",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02b9524db62d22ccd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea5eaaf68b30acf0",
            "route_table_id": "rtb-0e2cdf92e20032506",
            "subnet_id": "subnet-054462305ab65a38e"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce4361b685245e7",
            "route_table_id": "rtb-082ae9243975c0780",
            "subnet_id": "subnet-09ab5297c5a90089b"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:security-group/sg-07af0c3576010418a",
            "description": "allow inbound from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07af0c3576010418a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0790e00fde976254e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-task-security-group",
            "name_prefix": null,
            "owner_id": "875836252453",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:security-group/sg-0790e00fde976254e",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0790e00fde976254e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "875836252453",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:subnet/subnet-054462305ab65a38e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-054462305ab65a38e",
            "map_public_ip_on_launch": false,
            "owner_id": "875836252453",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:subnet/subnet-09ab5297c5a90089b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09ab5297c5a90089b",
            "map_public_ip_on_launch": false,
            "owner_id": "875836252453",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:subnet/subnet-04e3be87ffc3357ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04e3be87ffc3357ff",
            "map_public_ip_on_launch": true,
            "owner_id": "875836252453",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:subnet/subnet-01cef58190394af6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01cef58190394af6d",
            "map_public_ip_on_launch": true,
            "owner_id": "875836252453",
            "vpc_id": "vpc-0d1dead4e2acdbbe7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:875836252453:vpc/vpc-0d1dead4e2acdbbe7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb742fb5c8212392",
            "default_route_table_id": "rtb-092ca7c688796bf38",
            "default_security_group_id": "sg-0db30ac2c196d1ae2",
            "dhcp_options_id": "dopt-73ea351a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d1dead4e2acdbbe7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092ca7c688796bf38",
            "owner_id": "875836252453"
          }
        }
      ]
    }
  ]
}